Atualizar o abas-style.css

--- a/abas-style.css
+++ b/abas-style.css
@@ -15,7 +15,7 @@ color: #fff;
  }
 
 button {
-background-color: #000;
+background-color: transparent;
 border: none;
 color: #fff;
 margin: 10px 0 0 20px;
