--- a/abas-style.css
+++ b/abas-style.css
@@ -18,7 +18,7 @@ button {
 background-color: transparent;
 border: none;
 color: #fff;
-margin: 10px 0 0 20px;
+margin: 10px 0 6px 20px;
 font-size: 200%;
 
 }
