--- a/loc-style.css
+++ b/loc-style.css
@@ -1,3 +1,4 @@
+
 *{
     padding: 0;
     margin: 0;
@@ -23,17 +24,26 @@ body {
 .fale-conosco {
     text-align: center;
     color: white;
-    margin: 0 0 20px 0;
     font-size: 20px;
+    border-radius: 20px;
+    padding: 3%;
+    background-color: #blue;
+}
+
+.fale-conosco li {
+    border-radius: 20px;
+    padding: 1%;
+    border: solid black 2px;
+    background-color:#071A40;
 }
 
 .titulo {
     font-size: 40px;
-    margin: 70px 0 30px 0;
+    margin: 30px 0 30px 0;
 }
 
 .inf {
-    margin: 10px;
+    margin: 10px 0 20px 0;
 }
 
 /* 
