--- a/trabalhos-style.css
+++ b/trabalhos-style.css
@@ -40,8 +40,8 @@ body {
 }
 
 .polaroid {
-    border-bottom: 60px solid rgb(30, 21, 112);
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-bottom: 60px solid rgb(255, 255, 255);
+    box-shadow: 0 4px 8px 0 rgb(13, 10, 138), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 img {
