--- a/loc-style.css
+++ b/loc-style.css
@@ -10,16 +10,15 @@ body {
 }
 
 .container {
-    display: flex;
-    justify-content: flex-end;
+    float: right;
 }
 
 .elemento {
-    position: fixed;
-    width: 150px;
-    height: 150px;
+    margin: -45px 0 0 0;
+    width: 170px;
+    height: 170px;
+    z-index: 0;
 }
-
 
 .fale-conosco {
     text-align: center;
