--- a/sobre-style.css
+++ b/sobre-style.css
@@ -5,7 +5,7 @@
 
 body {
     height: 100vh;
-    background: linear-gradient( black,#63b6ff, black);
+    background: linear-gradient( black,#124094, black);
 }
 
 .container {
@@ -30,7 +30,7 @@ body {
 .escrita{
     font-size: 200%;
     color: white;
-    background-image: linear-gradient(to right, #1E1B8C, #3084F2, #3084F2, #2E38F2);  
+    background-image: linear-gradient(to right, #1E1B8C, rgb(0, 0, 0), #3084F2, #2E38F2);  
     background-clip: text;
     -webkit-background-clip: text; 
     -webkit-text-fill-color: transparent;
