--- a/sobre-style.css
+++ b/sobre-style.css
@@ -24,11 +24,12 @@ body {
     top: 30%;
     margin:0;
     text-align:center;
+    align-items: center;
     font-family: 'Geologica', sans-serif;
 }
 
 .escrita{
-    font-size: 200%;
+    font-size: 100%;
     color: white;
     background-image: linear-gradient(to right, #000000, rgb(0, 0, 0), #000000, #000000);  
     background-clip: text;
