--- a/style.css
+++ b/style.css
@@ -14,9 +14,8 @@ body {
 }
 
 .elemento {
-    margin: -45px 0 0 0;
-    width: 170px;
-    height: 170px;
+    margin: 10px;
+    width: 150px;
     z-index: 0;
 }
 
@@ -125,6 +124,40 @@ div.container2 {
 
 
 
+
+
+
+
+.footer {
+    background-color: #222;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+  }
+  .logo {
+    width: 300px;
+  }
+  .social-icons {
+    display: flex;
+    gap: 10px;
+  }
+  .social-icons a {
+    text-decoration: none;
+    color: #333;
+  }
+  .links {
+    display: flex;
+    gap: 20px;
+  }
+
+.copyright {
+    text-align: center;
+    background-color: #777;
+    color: #333;
+    font-size: 50%;
+}
 
 
 
