--- a/abas-style.css
+++ b/abas-style.css
@@ -1,16 +1,17 @@
- nav.menu-lateral {
-     width: 150px;
-     height: 20px;
-     margin: 10px 0 0 0;
-     padding: 20px 0 40px 17px;
-     /* box-shadow: 2px 2px 2px 2px #78909c; */
-     border-radius: 20px;
-     position: fixed;
-     top: 0;
-     left: 0;
-     overflow: hidden;
-     transition: .5s;
-     font-family: 'Geologica', sans-serif;
+* {
+    padding: 0;
+    margin: 0;
+    font-size: 20px;
+}
+
+.menu-lateral {
+    width: 150px;
+    height: 20px;
+    padding: 20px 0 40px 17px;
+    position: fixed;
+    overflow: hidden;
+    transition: .5s;
+    font-family: 'Geologica', sans-serif;
     color: #fff;
  }
 
@@ -22,34 +23,23 @@ button {
     font-size: 200%;
 }
 
-
-
- nav.menu-lateral:hover {
+.menu-lateral:hover {
      width: 300px;
      height: 100%;
      background-color: #000;
- }
+}
 
- .btn-expandir {
-     width: 100%;
-     padding-left: 10px;
- }
-
- .btn-expandir>i {
-     color: #fff;
-     font-size: 24px;
-     cursor: pointer;
- }
-
- ul {
+ul {
      height: 100%;
      list-style-type: none;
  }
 
- ul li.item-menu {
+ul li.item-menu {
      transition: .3s;
      border-top-left-radius: 20px;
      border-bottom-left-radius: 20px;
+     border-top-right-radius: 20px;
+     border-bottom-right-radius: -20px;
  }
 
  ul li.ativo {
@@ -57,8 +47,8 @@ button {
  }
 
  ul li.item-menu:hover {
-     background: transparent;
- }
+    background-color: blue;
+}
 
  ul li.item-menu a {
      color: #fff;
@@ -73,8 +63,7 @@ button {
  ul li.item-menu a .txt-link {
      margin-left: 70px;
      transition: 1s;
-     opacity: 0;
- }
+}
 
  nav.menu-lateral:hover .txt-link {
      margin-left: 40px;
