--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 }
 
 body {
-    height: 100vh;
     background: linear-gradient(black, #011526, black);
 }
 
@@ -16,8 +15,7 @@ body {
 
 .elemento {
     margin: 10px;
-    width: 150px;
-    z-index: 0;
+    width: 120px;
 }
 
 
@@ -25,12 +23,12 @@ body {
 
 
 .center {
-    height: 100vh;
-    width: 100%;
+    height: 80vh;
+    width: 80%;
     max-width: 780px;
     transform: translatey(0px);
     animation: float 6s ease-in-out infinite;
-    z-index: 1;
+    z-index: -1;
 }
 
 @keyframes float {
@@ -57,7 +55,7 @@ body {
 }
 
 .nosso-nome {
-    font-size: 500%;
+    font-size: 400%;
     color: white;
     background-image: linear-gradient(to right, #1E1B8C, #3084F2, #3084F2, #2E38F2);
     background-clip: text;
@@ -67,10 +65,9 @@ body {
 }
 
 .descricao-texto {
-    color: white;
-    font-size: 150%;
-    padding: 60px;
-    margin: -20px 0 0 0;
+  color: white;
+  padding: 60px;
+  font-size: 100%;
 }
 
 
@@ -309,12 +306,11 @@ div.container2 {
 
 
 @media screen and (max-width: 640px) {
+
     .center {
-        width: 100%;
-        height: 70%;
-        right: 17px;
-        float: none;
-        margin: 0 0 -70px 0;
+        width: 60%;
+        height: 30%;
+        margin: 0;
     }
 
     @keyframes float {
@@ -331,19 +327,78 @@ div.container2 {
         }
     }
 
-    .elemento {
-        float: right;
-        width: 37%;
-        height: 37%;
-    }
-
-
 
     .principal {
-        
+      display: block;
     }
 
-    .descricao {
-        margin: -20px 0 0 0;
+    .elemento {
+        float: right;
+        width: 27%;
+        height: 27%;
     }
+
+    .nosso-nome {
+      font-size: 50px;
+    }
+
+    .descricao-texto {
+      margin: -40px 0 0 0;
+      font-size: 15px;
+    }
+  
+
+
+
+
+
+
+
+
+    .polaroid {
+      border-top: 5px solid rgb(255, 255, 255);
+      border-left: 5px solid rgb(255, 255, 255);
+      border-right: 5px solid rgb(255, 255, 255);
+      border-bottom: 20px solid rgb(255, 255, 255);
+      box-shadow: 0 4px 8px 0 rgb(38, 36, 158), 0 6px 20px 0 rgb(65, 63, 63);
+      width: 100%;
+      height: 40%;
+  }
+
+
+
+  .descricao {
+    margin: 0;
+    font-size: 50%;
 }
+
+  .video {
+    width: 50%;
+    height: 80%;
+  }
+
+
+  .member {
+    display: grid;
+    grid-template-columns: 50% 50%;
+  }
+
+
+
+
+
+
+
+  footer {
+    padding: auto;
+  }
+
+  .logo {
+    width: 10%;
+  }
+
+
+  .social-icons a {
+    padding: 0;
+  }
+} 
