--- a/abas-style.css
+++ b/abas-style.css
@@ -1,98 +1,113 @@
 * {
-    padding: 0;
     margin: 0;
-    font-size: 20px;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #f5f5f5;
+    margin: 0;
+}
+
+.container-menu {
+    transition: all;
+    position: fixed;
+    width: 70px;
+    height: 100px;
+    overflow: hidden;
+    z-index: 1;
+    font-size: 100%;
 }
 
 .menu-lateral {
-    width: 150px;
-    height: 20px;
-    padding: 20px 0 50px 0;
-    position: fixed;
-    overflow: hidden;
-    transition: .5s;
-    font-family: 'Geologica', sans-serif;
-    color: #fff;
- }
-
-button {
+    height: 100vh;
+    width: 280px;
     background-color: transparent;
-    border: none;
     color: #fff;
-    margin: 10px 0 6px 20px;
-    font-size: 200%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 0;
+    transition: width 0.3s;
+    z-index: 1;
+    box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.1);
 }
 
 .menu-lateral:hover {
-     width: 300px;
-     height: 100%;
-     background-color: #000;
+    position: fixed;
+    width: 320px;
+    height: 100vh;
+    background-color: #222;
 }
 
-ul {
-     height: 100%;
-     list-style-type: none;
- }
-
-ul li.item-menu {
-     transition: .3s;
-     border-top-left-radius: 20px;
-     border-bottom-left-radius: 20px;
-     border-top-right-radius: 20px;
- }
-
- ul li.ativo {
-     background: linear-gradient(to right, #78909c 1%, #000 70%)
- }
-
- ul li.item-menu:hover {
-    background-color: blue;
+.logo {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    font-size: 24px;
+    transition: background-color 0.3s;
+    cursor: pointer;
 }
 
- ul li.item-menu a {
-     color: #fff;
-     text-decoration: none;
-     font-size: 20px;
-     padding: 20px 4%;
-     display: flex;
-     margin-bottom: 20px;
-     line-height: 30px;
- }
 
- ul li.item-menu a .txt-link {
-     margin-left: 70px;
-     transition: 1s;
+.logo i {
+    font-size: 32px;
+    margin-right: 10px;
 }
 
- nav.menu-lateral:hover .txt-link {
-     margin-left: 40px;
-     opacity: 1;
- }
+.logo-text {
+    font-size: 40px;
+    font-weight: 700;
+    background-image: linear-gradient(to right, #1E1B8C, #3084F2, #3084F2, #2E38F2);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
 
- ul li.item-menu a .icon i {
-     font-size: 30px;
-     margin-left: 10px;
- }
+.menu-list {
+    list-style: none;
+    padding: 0;
+    width: 100%;
+}
 
- @media screen and (max-width: 1024px) {
+.menu-list .item-menu {
+    margin: 10px 0;
+    transition: background-color 0.3s;
+}
 
-     nav .menu-lateral {
-         z-index: 1;
-     }
+.menu-list a {
+    display: flex;
+    align-items: center;
+    padding: 15px 20px;
+    color: #fff;
+    text-decoration: none;
+    transition: background-color 0.3s;
+}
 
-     .center {
-         z-index: 0;
-     }
+.menu-list a:hover {
+    background-color: rgba(121, 118, 118, 0.801);
+    z-index: 3;
+}
 
-     .elemento {
-         z-index: -1;
-     }
+.menu-label {
+    margin-left: 15px;
+}
 
-     nav.menu-lateral:active {
+.content {
+    flex: 1;
+    padding: 40px;
+}
 
-         width: 100%;
-         height: 100%;
-         background-color: transparent;
-     }
+@media screen and (max-width: 640px) {
 
- }
+    .container-menu {
+        font-size: 10%;
+    }
+
+    .menu-lateral:hover {
+        width: 200px;
+        height: 100vh;
+    }
+}
