--- a/loc-style.css
+++ b/loc-style.css
@@ -14,10 +14,8 @@ body {
 }
 
 .elemento {
-    margin: -45px 0 0 0;
-    width: 170px;
-    height: 170px;
-    z-index: 0;
+    margin: 10px;
+    width: 80px;
 }
 
 .fale-conosco {
