--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ div.container2 {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('praticando-robotica.jpg');
+  background-image: url('img/praticando-robotica.jpg');
   background-size: cover;
   background-attachment: fixed;
   opacity: 0.5; /* ajuste a opacidade conforme desejado */
