--- a/style.css
+++ b/style.css
@@ -93,7 +93,6 @@ body {
 
 img {
     width: 70%;
-    height: 50%;
 }
 
 div.container2 {
@@ -140,7 +139,7 @@ div.container2 {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('img/praticando-robotica.jpg');
+  background-image: url('projetos/praticando-robotica.jpg');
   background-size: cover;
   background-attachment: fixed;
   opacity: 0.5; /* ajuste a opacidade conforme desejado */
@@ -165,11 +164,11 @@ div.container2 {
   }
   
   .member {
-    width: 10px;
+    width: 350px;
     background-color: #000;
     color: white;
     margin: 0.5rem;
-    padding: 6% 13%;
+    padding: 1em;
     border-radius: 10px;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
     display: flex;
