--- a/loc-style.css
+++ b/loc-style.css
@@ -42,6 +42,12 @@ body {
     margin: 10px 0 20px 0;
 }
 
+iframe {
+    width: "100%";
+    height: "450";
+    border: 0; 
+}
+
 /* 
 .rodape{
     background-color: blueviolet;
