--- a/loc-style.css
+++ b/loc-style.css
@@ -42,9 +42,14 @@ body {
     margin: 10px 0 20px 0;
 }
 
+.mapa-conteudo {
+    display: flex;
+    justify-content: center;
+}
+
 iframe {
-    width: "100%";
-    height: "450";
+    width: 90%;
+    height: 450px;
     border: 0; 
 }
 
