--- a/style.css
+++ b/style.css
@@ -329,7 +329,7 @@ footer a {
     .principal {
       display: block;
       font-size: 50px;
-
+      margin: 20px 0 0 0;
     }
 
     .nosso-nome {
