ajuste na borda do iframe

--- a/loc-style.css
+++ b/loc-style.css
@@ -54,7 +54,8 @@ body {
 }
 
 iframe {
-    border-radius: 20px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
     width: 88%;
     height: 450px;
     border: 0; 
